# ssh-term

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml
rust_src/: lib.rs
src/ssh_term/: app.py
src/ssh_term/models/: config.py  connection.py  snippet.py
src/ssh_term/screens/: batch_execute.py  connection_form.py  dashboard.py  file_transfer.py  snippet_manager.py  snippet_palette.py  terminal_screen.py  workspace_screen.py
src/ssh_term/services/: sftp_manager.py  ssh_manager.py
src/ssh_term/widgets/: remote_file_tree.py  terminal_emulator.py
tests/: benchmark_terminal.py  test_terminal_emulator.py  test_ui_e2e.py  test_vte_functional.py
