[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ssh-term"
version = "0.2.0"
description = "A minimalistic TUI SSH terminal manager"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "rich>=13.0.0",
    "asyncssh>=2.14.0",
    "bcrypt>=4.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
ssh-term = "ssh_term.__main__:main"

[tool.maturin]
python-source = "src"
module-name = "ssh_term.rs_term"
